fixed some spacing issues

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -126,7 +126,7 @@ h1 {
 }
 
 .bottom-text {
-  margin-bottom: 50px;
+  margin-bottom: 68px;
 }
 
 .navbar-nav {
@@ -165,4 +165,11 @@ h1 {
 
 #create-button {
   padding-left: 35px;
+}
+
+#sprite-tops {
+  padding: 0%;
+  margin: 0%;
+  height: 250px;
+  width: 18rem;
 }
